--- a/project.html
+++ b/project.html
@@ -228,9 +228,11 @@ button:visited {
 	<td>
 	<div id="DocInfo">
 		<h2>Sk. Arif Ahmed, Ph.D.</h2>
-		<h3> Assistant Professor, XIM University, Bhubaneswar, India
+		<h3> Senior Researcher, UiT The Arctic University of Norway, Norway;
 		<br/>
 		Senior Member, IEEE
+		<br/>
+		Former Assistant Professor, School of Computer Science and Engineering, XIM University, Bhubaneswar, India;
 		<br/>
 		Former Postdoc, Dept. of Physics and Technology, UiT The Arctic University of Norway, Norway;
 		<br/>
