--- a/contact.html
+++ b/contact.html
@@ -260,10 +260,11 @@ button:visited {
     
     <h2>Contact</h2>
    Dr. Arif Ahmed </br>
-School of Computer Science and Engineering,</br>
-XIM University, Bhubaneswar</br>
-Plot No:12(A), Nijigada, Kurki, Harirajpur,</br>
-Odisha 752050</br>
+Department of Computer Science,</br>
+UiT The Arctic University of Norway</br>
+PO Box 6050 Stakkevollan</br>
+N-9037 Tromsø</br>
+Norway</br>
     </div>
 </div>
 </body></html>
