--- a/index.html
+++ b/index.html
@@ -291,18 +291,18 @@ He is a Senior Member of IEEE and Digital Life Norway (DLN).
 <h2>Activities</h2>
 <ul>
 
-<li>Area Chair  <a href="https://events.iitbhilai.ac.in/icmc2025/" target="_blank">11th International Conference on Mathematics and Computing
+<li>Area Chair,  <a href="https://events.iitbhilai.ac.in/icmc2025/" target="_blank">11th International Conference on Mathematics and Computing
 ICMC 2025
 </a>, India </li>
 	
-<li>Organizer  <a href="https://scse.xim.edu.in/news-events/xicai-2024/" target="_blank">XAVIER INTERNATIONAL CONFERENCE ON ARTIFICIAL INTELLIGENCE, XICAI 2024
+<li>Organizer,  <a href="https://scse.xim.edu.in/news-events/xicai-2024/" target="_blank">XAVIER INTERNATIONAL CONFERENCE ON ARTIFICIAL INTELLIGENCE, XICAI 2024
 </a>, India </li>
 <li>PC Member  <a href="https://www.iaria.org/conferences2021/PATTERNS21.html" target="_blank">PATTERNS 2021, The Thirteenth International Conference on Pervasive Patterns and Applications
 </a>, Portugal </li>
 
-<li>PC Member  <a href="http://www.intsci.ac.cn/icis2020/" target="_blank"> The Fourth International Conference on Intelligence Science (ICIS2020)</a>, India</li>
-<li>PC Member  <a href="https://sites.google.com/kau.edu.sa/micmed-pakdd2021/" target="_blank"> MICMED - PAKDD 2021 Workshop on Machine Intelligence Coinciding with Data Mining Applications in Biology and Medicine</a>, Dubai</li>
-<li>PC Member  <a href="https://icmc2021.in/" target="_blank"> 7th International Conference on Mathematics and Computing
+<li>PC Member,  <a href="http://www.intsci.ac.cn/icis2020/" target="_blank"> The Fourth International Conference on Intelligence Science (ICIS2020)</a>, India</li>
+<li>PC Member,  <a href="https://sites.google.com/kau.edu.sa/micmed-pakdd2021/" target="_blank"> MICMED - PAKDD 2021 Workshop on Machine Intelligence Coinciding with Data Mining Applications in Biology and Medicine</a>, Dubai</li>
+<li>PC Member,  <a href="https://icmc2021.in/" target="_blank"> 7th International Conference on Mathematics and Computing
 
 ICMC 2021</a>, India</li>
 </ul>
