--- a/teaching.html
+++ b/teaching.html
@@ -257,7 +257,7 @@ button:visited {
 <button class="button--6"><a href="contact.html">Contact</a></button>
 </tr>
 	</tbody></table>
-
+<br/>
     
     <h2><strong>TEACHING ACTIVITIES</strong></h2>
 <p><span class="style1"><strong>Classroom teaching experience:</strong> I have experience in classroom teaching at all levels: course  coordinator, course designer, lecturer, tutorial conductor, and lab session  instructor. Most of my teaching experience gathered at Haldia Institute of  Technology (HIT), India. Additionally, I have designed and conducted courses  for industrial persons and faculty members. Below, I present details of my  teaching experience.</span> </p>
@@ -464,9 +464,11 @@ button:visited {
   <li>Global Initiative of Academic Network  (GIAN), 28th September, 2017 (7 days)<br>
       <br>
         <br>
-      <strong>SUPERVISION/MENTORING OF GRADUATE AND UNDERGRADUATE  STUDENTS </strong></li>
+      <strong>SUPERVISION/MENTORING OF GRADUATE AND UNDERGRADUATE  STUDENTS/ PhD </strong></li>
 </ul>
-<p class="style1">2009 &ndash; 2018 &nbsp;&nbsp;&nbsp;&nbsp; 4  to 6 students (UG and PG) in each year.<br />
+	  <p class="style1">2018 &ndash; 2024 &nbsp;&nbsp;&nbsp;&nbsp; 1 Ph.D (Thesis Submitted), 2 Ph.D students ongoing (With collaboration), 1 Master Thesis and 3
+Undergraduate Students (UiT), 4 Master Thesis and 10 Graduate Thesis in XIM University.<br />
+<p class="style1">2009 &ndash; 2018 &nbsp;&nbsp;&nbsp;&nbsp; 4  to 6 students (UG and PG) in each year. (HIT, India)<br />
   2010 &ndash; 2018&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 2  Students each year for Final Project (IGNOU)<br />
   2018 &ndash; 2020&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 4  Ph.D students ongoing (Formal guidance with collaborators), 1 master thesis and  3 undergraduate students (UiT, Norway)</p>
   </div>
