--- a/teaching.html
+++ b/teaching.html
@@ -260,7 +260,7 @@ button:visited {
 <br/>
     
     <h2><strong>TEACHING ACTIVITIES</strong></h2>
-<p><span class="style1"><strong>Classroom teaching experience:</strong> I have experience in classroom teaching at all levels: course  coordinator, course designer, lecturer, tutorial conductor, and lab session  instructor. Most of my teaching experience gathered at Haldia Institute of  Technology (HIT), India. Additionally, I have designed and conducted courses  for industrial persons and faculty members. Below, I present details of my  teaching experience.</span> </p>
+<p><span class="style1"><strong>Classroom teaching experience:</strong> I have experience in classroom teaching at all levels: course  coordinator, course designer, lecturer, tutorial conductor, and lab session  instructor. Most of my teaching experience was gathered at the Haldia Institute of  Technology (HIT), and XIM University, India. Additionally, I have designed and conducted courses  for industrial persons and faculty members. Below, I present details of my  teaching experience.</span> </p>
 <table border="1" align="center" cellpadding="0" cellspacing="0">
   <tr>
     <td  valign="top" bgcolor="#CCCCCC"><br />
