--- a/index.html
+++ b/index.html
@@ -283,8 +283,8 @@ He is a Senior Member of IEEE and Digital Life Norway (DLN).
 	
 	<ul>
 	
-	<li>Sept'24,<font color="red"><b> Accepted !!! </b> </font> ICPR 2024, ICIP 2024
-</li>
+	<li>Sept'24,<font color="red"><b> Accepted !!! </b> </font> ICPR 2024, ICIP 2024</li>
+	<li>Oct'24,<font color="red"><b> Accepted !!! </b> </font> Nature Communication Biology <a href="https://www.nature.com/articles/s42003-024-06894-z"> Click here</a></li>
   
   </ul>    
 	
