Update news and activities sections in index.html
Added new news items about a book publication and upcoming conferences.

--- a/index.html
+++ b/index.html
@@ -283,14 +283,20 @@ He is a Senior Member of IEEE and Digital Life Norway (DLN).
 	
 	<ul>
 	
-	<li>Sept'24,<font color="red"><b> Accepted !!! </b> </font> ICPR 2024, ICIP 2024</li>
-	<li>Oct'24,<font color="red"><b> Accepted !!! </b> </font> Nature Communication Biology <a href="https://www.nature.com/articles/s42003-024-06894-z"> Click here</a></li>
+	<li>Jan'26,<font color="red"><b> Book Published !!! </b> </font>  <a href="https://www.worldscientific.com/worldscibooks/10.1142/14159?srsltid=AfmBOor24cuYVJDisTqGQLdYApwN7y7WeeB9MOcHV_E7wjeYmll7vVsI#t=aboutBook" target="_blank"> Gender and Diversity Policy in AI </a> </li>
+
   
   </ul>    
 	
 <h2>Activities</h2>
 <ul>
 
+<li>Program Chair,  <a href="https://www.icaiet.co.in/" target="_blank">2nd IEEE International Conference on Artificial Intelligence and Emerging Technologies (ICAIET-2027) is scheduled to be held in January 2027 at the School of Computer Science and Engineering, XIM University, Bhubaneswar, India. 
+</a> </li>
+
+<li>Program Chair,  <a href="https://www.bioailab.org/ai4fertility" target="_blank">The First Workshop on AI in Fertility Science, 2026, UiT The Arctic University of Norway, Tromsø
+</a> </li>
+	
 <li>Area Chair,  <a href="https://events.iitbhilai.ac.in/icmc2025/" target="_blank">11th International Conference on Mathematics and Computing
 ICMC 2025
 </a>, India </li>
