--- a/pub.html
+++ b/pub.html
@@ -210,6 +210,89 @@ button:visited {
 }
 
 </style>
+  <style>
+        body {
+            font-family: -apple-system, system-ui, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            margin: 0;
+            background-color: #f8f9fa;
+        }
+
+        .pub-card {
+            background: #fff;
+            max-width: 650px;
+            width: 100%;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+            display: flex;
+            overflow: hidden;
+            border: 1px solid #eee;
+        }
+
+        .teaser {
+            width: 180px;
+            min-width: 180px;
+            background: #f0f0f0;
+        }
+
+        .teaser img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        .info {
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
+
+        .venue {
+            font-size: 11px;
+            font-weight: 700;
+            color: #666;
+            text-transform: uppercase;
+            margin-bottom: 5px;
+        }
+
+        h1 {
+            font-size: 1.15rem;
+            margin: 0 0 8px 0;
+            color: #111;
+            line-height: 1.3;
+        }
+
+        .authors {
+            font-size: 0.9rem;
+            color: #555;
+            margin-bottom: 12px;
+        }
+
+        .btn {
+            align-self: flex-start;
+            padding: 6px 14px;
+            background: #007bff;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 4px;
+            font-size: 0.85rem;
+            font-weight: 500;
+            transition: 0.2s;
+        }
+
+        .btn:hover {
+            background: #0056b3;
+        }
+
+        @media (max-width: 500px) {
+            .pub-card { flex-direction: column; }
+            .teaser { width: 100%; height: 140px; }
+        }
+    </style>
 
 </head>
 
@@ -417,3 +500,4 @@ Anomalous Activity Detection using Weighted Region Association Graph, 10th Inter
 		<div>[C1] D. P. Dogra, <b>A. Ahmed</b>, H. Bhaskar. Interest Area Localization using Trajectory Analysis in Surveillance Scenes. 10th International Conference on Computer Vision Theory and Applications (VISAPP), pp. 478-485, Berlin, March 2015.
 		</div>
 </body></html>
+
