--- a/pub.html
+++ b/pub.html
@@ -341,163 +341,6 @@ button:visited {
 </tr>
 	</tbody></table>
 	
-	<h2>Year 2021</h2>
-	<div>[J25] Das B, Majumder M, Phadikar S, <b>A. A. Sekh</b>. Multiple-choice question generation with auto-generated distractors for computer-assisted educational assessment. 
-	Multimedia Tools and Applications. 2021</div>
-	
-	
-	<div>[J24] Samonto S, Kar S, Pal S, Ozkan AT, <b>A. A. Sekh</b>. Fuzzy Logic Controller Aided Expert Relaying Mechanism System. 
-	Journal of the Franklin Institute. Elsevier, 2021</div>
-	
-	
-	<div>[J23] Das, B., <b>A. A. Sekh</b>, Majumder, M. et al. Can deep learning solve a preschool image understanding problem?. 
-	Neural Comput & Applic (2021). https://doi.org/10.1007/s00521-021-06080-w</div>
-	
-	
-	<div>[J22] R.Pal, <b>A. A. Sekh</b>, D.P.Dogra, S.Kar, D.P.Prasad, Topic-based Video Analysis: A Survey, 
-	ACM Computing Survey, ACM, 2021, https://doi.org/10.1145/3459089</div>
-	
-	
-	<div>[J21] B. Das; M. Majumder, S. Phadikar,<b>A. A. Sekh</b>, Automatic Question Generation and Answer As-sessment: A Survey, 
-	Research and Practice in Technology Enhanced Learning, Springer, 2021</div>
-	
-	<div>[J20] Jun, S. W., <b>A. A. Sekh</b>, Quek, C., & Prasad, D. K. seMLP: Self-evolving Multi-layer Perceptron in Stock Trading Decision Making. 
-	SN Computer Science, 2021, 2(2), 1-11</div>
-	
-	
-	<div>[J19] S. Samonto, S. Kar, S. Pal, <b>A. A. Sekh</b>, O. Castillo, G. Park Best Fit Membership Function for De-signing Fuzzy Logic Controller Aided Intelligent Overcurrent Fault Protection Scheme, 
-	International Transactions on Electrical Energy Systems , Wiley, 2021</div>
-	
-	<div>[C12] Zhe, Q. E., <b>A. A. Sekh</b>, Quek, C., & Prasad, D. K. (2021, February). Recurrent Self-evolving Takagi–Sugeno–Kan Fuzzy Neural Network (RST-FNN) Based Type-2 Diabetic Modeling. 
-	In International Conference on Intelligence Science (pp. 125-136). Springer, Cham. </div>
-	
-	
-	<div>[J18] Samonto, S., Kar, S., Pal, S.,<b>A. A. Sekh</b>, & Sarkar, B. (2021). Fuzzy Based Algorithm for Stage-I of Cascaded Intelligent Relaying. International Journal of Intelligence Science, 11(01), 31.</div>
-	
-	<div>[C11] A. Somani, <b>A. A. Sekh</b>, I-S. Opstad, AB Birgisdottir, T Myrmel, BS Ahluwalia, K Agarwal, Dilip K Prasad, A. Horsch, Digital Staining of Mitochondria in Label-free Live-cell Microscopy, Bildver-arbeitung für die 
-	Medizin - Algorithmen System Anwendungen – 2021, Germany, Bildverarbei-tung für die Medizin . Informatik aktuell. Springer </div>
-	
-	
-	<h2>Year 2020</h2>
-	
-	<div>[C10] S. Das, S. Kar, <b>A. A. Sekh</b>, A large volume dataset for grading tomato freshness quality, The Fifth IAPR International Conference on Computer Vision & Image Processing (CVIP 2020), India   	</div>
-	
-	<div>[C9] M. Islam, S. Joardar, <b>A. A. Sekh</b>, RingFIR: A large volume earring dataset for fashion image re-trieval, Fifth IAPR International Conference on Computer Vision & Image Processing (CVIP 2020); India
-	</div>
-	
-	<div>[C8] <b>A. A Sekh</b>, I-S. Opstad, AB Birgisdottir, T Myrmel, BS Ahluwalia, K Agarwal, Dilip K Prasad,
-Learning nanoscale motion patterns of vesicles in living cells, IEEE Conference on Computer Vision
-and Pattern Recognition (CVPR), 2020
-	</div>
-	
-<div>[J17] Pal, R.; <b>A A Sekh</b>.; Kar, S.; Prasad, D.K. Neural Network Based Country Wise Risk Prediction of
-COVID-19. Appl. Sci. 2020, 10, 6448. doi: 10.3390/app10186448
+	</html>
 
-<div>[J16] D. Maji, <b>A A Sekh</b>, Automatic Grading of Retinal Blood Vessel in Deep Retinal Image Diagnosis,
-Journal of Medical Systems, Springer Nature, 2020, doi: 10.1007/s10916-020-01635-1
-	</div>
-	
-<div>[J15] <b>A A Sekh</b>, Dogra, D. P., Kar, S., Roy, P. P., & Prasad, D. K.. Can We Automate Diagrammatic
-Reasoning?. Pattern Recognition, 2020, 107412. doi: 10.1016/j.patcog.2020.107412
-	</div>
-	
-<div>[J14] F Liu, <b>A A Sekh</b>, C Quek, GS Ng, DK Prasad, RS-HeRR: A Rough Set based Hebbian Rule Reduction Neuro-Fuzzy System, 2020, Neural Computing and Applications, Springer Nature
-	</div>
-	
-<div>[J13] <b>A A Sekh</b>, Dogra, D. P., Kar, S., & Roy, P. P. Video trajectory analysis using unsupervised clustering and multi-criteria ranking. Soft Computing, 2020, Springer Nature
-	</div>
-	
-<div>[J12] <b>A A Sekh</b>, D. P. Dogra, H. Choi, S. Chae, I. Kim, Person re-identification in videos by analyzing
-spatio-temporal tubes, Multimedia Tools and Applications, Springer Nature, 2020
-	</div>
-	
-<div>[J11] Samonto, S., Kar, S., Pal, S., & <b>Sekh, A. A</b>. Fuzzy logic based multistage relaying model for cascaded intelligent fault protection scheme. Electric Power Systems Research, 184, 2020, Elsevier
-	</div>
-	
-<div>[J10] Mandal, Sourav, <b>AA Sekh</b>, and Sudip Kumar Naskar. Solving Arithmetic Word Problems: a Deep
-Learning Based Approach.” Journal of Intelligent & Fuzzy Systems, IOS Press, 2020
-	</div>
-	
-<div>[J9] <b>Ahmed, S. A.</b>, Dogra, D. P., Kar, S., Roy, P. P., & Prasad, D. K. ELM-HTM Guided Bio-inspired
-Unsupervised Learning for Anomalous Trajectory Classification. Cognitive Systems Research. 2020,
-Elsevier
-		</div>
-	
-<h2>Year 2019</h2>
-	<div>[BOOK1] Castillo, O., Jana, D.K., Giri, D., <b>Sekh, A.A.</b> (Eds.), Recent Advances in Intelligent Information Systems and
-Applied Mathematics, Springer Nature, 2019
-</div>
-
-	<div>[J8] S Mukherjee, <b>A. Ahmed</b>, D. P. Dogra, S. Kar, P. P. Roy. Fingertip Detection and Tracking for
-Recognition of Air-Writing in Videos, Expert Systems with Applications, 2019
-</div>
-
-<div>[J7] B. Das, M. Majumder, S. Phadikar, <b>A. Ahmed</b>, Automatic Generation of Fill-in-the-blank Question
-with Corpus-based Distractors for e-assessment to Enhance Learning. Computer Applications in Engineering Education, 2019, 10.1002/cae.22163
-</div>
-
-<div>[J6] <b>A. Ahmed</b>, D. P. Dogra, S. Kar, R. Patnaik, S. Lee, H. Choi, I. J. Kim. Query-based Video Synopsis
-for Intelligent Traffic Monitoring Applications. IEEE Transactions on Intelligent Transportation
-Systems, 2019, 10.1109/TITS.2019.2929618
-	</div>
-	
-	<h2>Year 2018</h2>
-	
-	<div>[J5] <b>A. Ahmed</b>, D. P. Dogra, S. Kar, P. P. Roy. Trajectory-based surveillance analysis: A survey. IEEE
-Transactions on Circuits and Systems for Video Technology, 2018, 10.1109/TCSVT.2018.2857489
-</div>
-
-<div>[J4] <b>A. Ahmed</b>, D. P. Dogra, S. Kar, P. P. Roy. Surveillance Scene Representation and Trajectory
-Anomaly Detection Using Aggregation of Multiple Concepts, Expert Systems with Applications,
-Elsevier, 2018, doi: 10.1016/j.eswa.2018.02.013
-	</div>
-	
-	
-	<h2>Year 2017</h2>
-	
-	<div>[J3] <b>A. Ahmed</b>, D. P. Dogra, S. Kar, P. P. Roy. Unsupervised Classification of Erroneous Video Object
-Trajectories, Soft Computing, Springer, 2017, 1-19, DOI: 10.1007/s00500-017-2656- x.
-</div>
-
-<div>[J2] <b>A. Ahmed</b>, D. P. Dogra, B.Kim, P.Hill, H. Bhaskar, S.Kar, Localization of Region of Interest in
-Surveillance Scene, Multimedia Tools and Applications, Springer, (2017) 76(11), 13651- 13680 doi:
-10.1007/s11042-016-3762-y
-	</div>
-	
-	<div>[C7] <b>A. Ahmed</b>, D. P. Dogra, S. Kar and P. P. Roy Natural language description of surveillance
-events. In Proceedings of International Conference of Information Technology and Applied Mathematics, ICITAM (2017), Haldia, India, Springer, doi: 10:1007=978 - 981 - 10 - 7590 - 2 10
-</div>
-
-<div>[C6] <b>A. Ahmed</b>, D. P. Dogra, S. Kar, R. Patanaik, H. Choi, I. Kim, S. Lee Video Synopsis
-Generation Using Spatio-Temporal Groups. IEEE International Conference on Signal and
-Image Processing Applications (ICSIPA),2017, Malaysia. doi: 10.1109/ICSIPA.2017.8120666
-</div>
-
-<div>[C5] <b>A. Ahmed</b>, D. P. Dogra, S. Kar and P. P. Roy Extraction of Long-duration Moving Object Trajectories from Curtailed Tracks. In Proceedings of 2nd International Conference on Computer Vision and
-Image Processing, CVIP (2017), IIT Roorkee, India, Springer
-	</div>
-	
-	
-	<h2>Year 2016</h2>
-		<div>[J1] D. P. Dogra, <b>A. Ahmed</b>, H. Bhaskar, Smart Video Summarization using Mealy Machine
-based Trajectory Modelling, Multimedia Tools and Applications, Springer, (2016) 75(11), 6373-
-6401 doi:10.1007/s11042-015-2576-7
-		</div>
-		
-		<div>[C4] R.Saini, <b>A. Ahmed</b>, D.P. Dogra, P.Roy, Surveillance Scene Segmentation Based on Trajectory Classification Using Supervised Learning. In Proceedings of International Conference on Computer Vision and Image Processing (pp. 261-271). 2016, Springer, Singapore.
-		</div>
-		
-		<div>[C3] R.Saini, <b>A. Ahmed</b>, D.P. Dogra, P.Roy, Classification of Object Trajectories Represented by HighLevel Features Using Unsupervised Learning. In Proceedings of International Conference on Computer Vision and Image Processing (pp. 273-284). 2016, Springer, Singapore
-		</div>
-	
-	
-	
-	<h2>Year 2015</h2>
-		
-		<div>[C2] D. P. Dogra, R. D. Reddy, K.S. Subramanyam, <b>A. Ahmed</b>, H. Bhaskar. Scene Representation and
-Anomalous Activity Detection using Weighted Region Association Graph, 10th International Conference on Computer Vision Theory and Applications (VISAPP), pp.104- 112, Berlin, March 2015.
-		</div>
-		<div>[C1] D. P. Dogra, <b>A. Ahmed</b>, H. Bhaskar. Interest Area Localization using Trajectory Analysis in Surveillance Scenes. 10th International Conference on Computer Vision Theory and Applications (VISAPP), pp. 478-485, Berlin, March 2015.
-		</div>
-</body></html>
 
