Refactor pub.html with updated styles and content

--- a/pub.html
+++ b/pub.html
@@ -340,7 +340,25 @@ button:visited {
 <button class="button--6"><a href="contact.html">Contact</a></button>
 </tr>
 	</tbody></table>
-	
+
+
+	    <article class="pub-card">
+        <div class="teaser">
+            <img src="https://images.unsplash.com/photo-1614728263952-84ea206f99b6?auto=format&fit=crop&q=80&w=400" alt="Teaser">
+        </div>
+        
+        <div class="info">
+            <div>
+                <div class="venue">CVPR 2025</div>
+                <h1>Neural Scene Reconstruction via Sparse Voxel Traversal</h1>
+                <p class="authors">Alex Rivers, Sam T. Chen, Maria Gonzalez</p>
+            </div>
+            
+            <a href="#" class="btn">View Paper</a>
+        </div>
+    </article>
+
 	</html>
+
 
 
