--- a/pub.html
+++ b/pub.html
@@ -343,20 +343,22 @@ button:visited {
 
 <br />
 	  <br />
+	  <br />
+	  <br />
 	  
 	    <article class="pub-card">
         <div class="teaser">
-            <img src="https://images.unsplash.com/photo-1614728263952-84ea206f99b6?auto=format&fit=crop&q=80&w=400" alt="Teaser">
+            <img src="cover.jpg" alt="Teaser">
         </div>
         
         <div class="info">
             <div>
-                <div class="venue">CVPR 2025</div>
-                <h1>Neural Scene Reconstruction via Sparse Voxel Traversal</h1>
-                <p class="authors">Alex Rivers, Sam T. Chen, Maria Gonzalez</p>
+                <div class="venue">World Scintific, 2025</div>
+                <h1>Gender and Diversity Policy in AI</h1>
+                <p class="authors">Arif Ahmed Sekh, DIlip K. Prasad</p>
             </div>
             
-            <a href="#" class="btn">View Paper</a>
+            <a href="https://www.worldscientific.com/worldscibooks/10.1142/14159?srsltid=AfmBOor24cuYVJDisTqGQLdYApwN7y7WeeB9MOcHV_E7wjeYmll7vVsI#t=aboutBook" class="btn">View Book</a>
         </div>
     </article>
 
@@ -380,6 +382,7 @@ button:visited {
     </article>
 
 	</html>
+
 
 
 
