--- a/pub.html
+++ b/pub.html
@@ -344,6 +344,7 @@ button:visited {
 <br />
 	  <br />
 	  <br />
+	  <title>Selected Publications</title>
 	  <br />
 	  
 	    <article class="pub-card">
@@ -367,21 +368,22 @@ button:visited {
 	  
 	    <article class="pub-card">
         <div class="teaser">
-            <img src="https://images.unsplash.com/photo-1614728263952-84ea206f99b6?auto=format&fit=crop&q=80&w=400" alt="Teaser">
+            <img src="explain.png" alt="Teaser">
         </div>
         
         <div class="info">
             <div>
-                <div class="venue">CVPR 2025</div>
-                <h1>Neural Scene Reconstruction via Sparse Voxel Traversal</h1>
-                <p class="authors">Alex Rivers, Sam T. Chen, Maria Gonzalez</p>
+                <div class="venue">ICCVW 2025</div>
+                <h1>Maps for Faithful and Interpretable Weakly-Supervised Model</h1>
+                <p class="authors">Ayush Somani, Arif Ahmed Sekh, Dilip K. Prasad</p>
             </div>
             
-            <a href="#" class="btn">View Paper</a>
+            <a href="https://openaccess.thecvf.com/content/ICCV2025W/STREAM/html/Somani_Explain_with_Confidence_Fusing_Saliency_Maps_for_Faithful_and_Interpretable_ICCVW_2025_paper.html" class="btn">View Paper</a>
         </div>
     </article>
 
 	</html>
+
 
 
 
