--- a/pub.html
+++ b/pub.html
@@ -236,12 +236,14 @@ button:visited {
             width: 180px;
             min-width: 180px;
             background: #f0f0f0;
+			overflow: hidden;
         }
 
         .teaser img {
             width: 100%;
             height: 100%;
             object-fit: cover;
+			object-position: center; /* Keeps the center of the image visible */
         }
 
         .info {
@@ -383,6 +385,7 @@ button:visited {
     </article>
 
 	</html>
+
 
 
 
