--- a/pub.html
+++ b/pub.html
@@ -376,7 +376,7 @@ button:visited {
         <div class="info">
             <div>
                 <div class="venue">ICCVW 2025</div>
-                <h1>Maps for Faithful and Interpretable Weakly-Supervised Model</h1>
+                <h1>Explain with Confidence: Fusing Saliency Maps for Faithful and Interpretable Weakly-Supervised Model</h1>
                 <p class="authors">Ayush Somani, Arif Ahmed Sekh, Dilip K. Prasad</p>
             </div>
             
@@ -385,6 +385,7 @@ button:visited {
     </article>
 
 	</html>
+
 
 
 
