--- a/pub.html
+++ b/pub.html
@@ -346,7 +346,7 @@ button:visited {
 <br />
 	  <br />
 	  <br />
-	  <title>Selected Publications</title>
+	  <h1>Selected Publications</h1>
 	  <br />
 	  
 	    <article class="pub-card">
@@ -385,6 +385,7 @@ button:visited {
     </article>
 
 	</html>
+
 
 
 
