--- a/pub.html
+++ b/pub.html
@@ -221,30 +221,25 @@ button:visited {
             background-color: #f8f9fa;
         }
 
-        .pub-card {
-            background: #fff;
-            max-width: 650px;
-            width: 100%;
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.05);
-            display: flex;
-            overflow: hidden;
-            border: 1px solid #eee;
-        }
+      .pub-card {
+    display: flex;
+    align-items: flex-start; /* Aligns content to the top */
+    max-width: 650px;
+    background: #fff;
+    border: 1px solid #eee;
+    border-radius: 10px;
+}
 
-        .teaser {
-            width: 180px;
-            min-width: 180px;
-            background: #f0f0f0;
-			overflow: hidden;
-        }
+.teaser {
+    width: 200px; /* Keep width fixed */
+    flex-shrink: 0;
+}
 
-        .teaser img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-			object-position: center; /* Keeps the center of the image visible */
-        }
+.teaser img {
+    width: 100%;
+    height: auto; /* Let the height be determined by the image itself */
+    display: block;
+}
 
         .info {
             padding: 20px;
@@ -385,6 +380,7 @@ button:visited {
     </article>
 
 	</html>
+
 
 
 
