--- a/pub.html
+++ b/pub.html
@@ -343,6 +343,31 @@ button:visited {
 	  <br />
 	  <h1>Selected Publications</h1>
 	  <br />
+
+
+
+
+  <article class="pub-card">
+        <div class="teaser">
+            <img src="vqa.pngS" alt="Teaser">
+        </div>
+        
+        <div class="info">
+            <div>
+                <div class="venue">ACM Computing Survey, 2026</div>
+                <h1>VisionAidQA: Advancing Visual Question Answering for the Visually Impaired</h1>
+                <p class="authors">R Pal, S Kar, DK Prasad, AA Sekh</p>
+            </div>
+            
+            <a href="https://dl.acm.org/doi/abs/10.1145/3788861" class="btn">View Paper</a>
+        </div>
+    </article>
+
+	  <br />
+	  <br />
+
+
+	  
 	  
 	    <article class="pub-card">
         <div class="teaser">
@@ -380,6 +405,7 @@ button:visited {
     </article>
 
 	</html>
+
 
 
 
