--- a/pub.html
+++ b/pub.html
@@ -349,7 +349,7 @@ button:visited {
 
   <article class="pub-card">
         <div class="teaser">
-            <img src="vqa.pngS" alt="Teaser">
+            <img src="vqa.png" alt="Teaser">
         </div>
         
         <div class="info">
@@ -405,6 +405,7 @@ button:visited {
     </article>
 
 	</html>
+
 
 
 
