--- a/pub.html
+++ b/pub.html
@@ -356,7 +356,7 @@ button:visited {
             <div>
                 <div class="venue">ACM Computing Survey, 2026</div>
                 <h1>VisionAidQA: Advancing Visual Question Answering for the Visually Impaired</h1>
-                <p class="authors">R Pal, S Kar, DK Prasad, AA Sekh</p>
+                <p class="authors">Ratnabali Pal, Samarjit Kar, Dilip K. Prasad, Arif Ahmed Sekh</p>
             </div>
             
             <a href="https://dl.acm.org/doi/abs/10.1145/3788861" class="btn">View Paper</a>
@@ -404,7 +404,32 @@ button:visited {
         </div>
     </article>
 
+	    <article class="pub-card">
+        <div class="teaser">
+            <img src="vqa.png" alt="Teaser">
+        </div>
+
+
+			
+	  <br />
+	  <br />
+	<article class="pub-card">
+        <div class="teaser">
+            <img src="vl.png" alt="Teaser">
+        </div>
+        <div class="info">
+            <div>
+                <div class="venue">Nature Scintific Reports, 2025</div>
+                <h1>AI-driven analysis by identifyingrisk factors of VL relapse in HIV co-infected patients</h1>
+                <p class="authors">Kumar, Abhishek, Sanchita Mondal, Debnarayan Khatua, Debashree Guha, Budhaditya Mukherjee, Arista Lahiri, Dilip K. Prasad, and Arif Ahmed Sekh</p>
+            </div>
+            
+            <a href="https://www.nature.com/articles/s41598-025-07406-7.pdf" class="btn">View Paper</a>
+        </div>
+    </article>
+
 	</html>
+
 
 
 
