--- a/pub.html
+++ b/pub.html
@@ -440,7 +440,42 @@ button:visited {
         </div>
     </article>
 
+	   <br />
+	  <br />
+	<article class="pub-card">
+        <div class="teaser">
+            <img src="cust.png" alt="Teaser">
+        </div>
+        <div class="info">
+            <div>
+                <div class="venue">International Conference on Pattern Recognition (ICPR), 2025</div>
+                <h1>Customizable and Programmable Deep Learning</h1>
+                <p class="authors">Ratnabali Pal, Samarjit Kar, and Arif Ahmed Sekh</p>
+            </div>
+            
+            <a href="https://link.springer.com/chapter/10.1007/978-3-031-78107-0_7" class="btn">View Paper</a>
+        </div>
+    </article>
+
+	   <br />
+	  <br />
+	<article class="pub-card">
+        <div class="teaser">
+            <img src="natbio.png" alt="Teaser">
+        </div>
+        <div class="info">
+            <div>
+                <div class="venue">Nature Communications Biology, 2024</div>
+                <h1>Single-cell phenotypic profiling and backtracing exposes and predicts clinically relevant subpopulations in isogenic Staphylococcus aureus communities</h1>
+                <p class="authors">Jonathan Hira, Bhupender Singh, Tirthankar Halder, Anel Mahmutovic, Clement Ajayi, Arif Ahmed Sekh, Kristin Hegstad, Mona Johannessen, Christian S Lentz</p>
+            </div>
+            
+            <a href="https://www.nature.com/articles/s42003-024-06894-z" class="btn">View Paper</a>
+        </div>
+    </article>
+
 	</html>
+
 
 
 
