--- a/project.html
+++ b/project.html
@@ -266,12 +266,12 @@ button:visited {
 		 	<strong>Summer School on ‘Gender & Diversity Policy in AI’</strong>,  Funding Agency: Digital Life Norway, Status: Completed, Duration: August, 2026 		</li>
 	
 	    <li>
-		<strong>OpenLivingCellAnalysis: Open- source technology for visualizing and analysis of fundamental proc- ess in living cell specifically organ- oids towards organoid specific knowledge discovery and disease understanding</strong>,  Funding Agency: SERB, Govt. of India, Status: Completed, Duration: May 2022-May 2024 		</li>
+		<strong>OpenLivingCellAnalysis: Open- source technology for visualizing and analysis of fundamental proc- ess in living cell specifically organoids, towards organoid specific knowledge discovery and disease understanding</strong>,  Funding Agency: SERB, Govt. of India, Status: Completed, Duration: May 2022-May 2024 		</li>
 		
         
 	
 			<li>
-		<strong>Data Intelligence for nanoscopy</strong>,  Funding Agency: UiT The Arctic University of Norway, Type: Post-doctoral Research, Status: Ongoing, Duration: May 2019-May 2022 [Principal Investigator Dr. 
+		<strong>Data Intelligence for nanoscopy</strong>,  Funding Agency: UiT The Arctic University of Norway, Type: Post-doctoral Research, Status: Completed, Duration: May 2019-May 2022 [Principal Investigator Prof. 
 		<a href="https://sites.google.com/site/uthkrishth/krishnaagarwal">Krishna Agarwal</a> (UiT)].		</li>
 		
          <li>
